# obs-websocket-cli

./: Cargo.toml
src/: main.rs
