[package]
name = "obs-websocket-cli"
version = "0.1.0"
authors = ["Emil H. Clausen <sequoiia@hummel.yt>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tungstenite = "0.10.1"
url = "2.1.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.8.1"
base64 = "0.12.0"
clap = "^2.33"